@@ -1,9 +1,13 @@
 v0.9 - Pending
+	+ Ability to modify image saturation
+	+ Recent file/list menu
 	+ Save/load accel_map in case user edits any gtk accelerators
 	+ Bug: Fullscreen controls can be on wrong screen with Xinerama
 	+ Bug: Scrollbars don't appear correctly on window resizes
 	+ Bug: Panning images doesn't always work properly
 	+ Bug: Alpha channel is lost when resizing image with transparency
+	+ Bug: Allow saving files when file extension isn't lowercase
+	+ Bug: Specified image scaling method isn't properly used
 
 v0.8.1 - October 19, 2006
 	+ Add list of image names to custom actions (%L)
